# lab06

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  LICENSE.rtf  README.md  appveyor.yml
.github/workflows/: ci.yml
examples/: example1.cpp  example2.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world/: CMakeLists.txt  hello_world.cpp
include/: print.hpp
solver/: CMakeLists.txt  equation.cpp
solver/solver_lib/: CMakeLists.txt  solver.cpp
sources/: print.cpp
